syntax = "proto3";

option java_package = "cn.migu.selection.proto.base";

message ReserveUpdateActionResponse {
	//状态码
	string status = 1;
	//状态描述
	string messageDesc = 2;
}